--- a/medlegal/web/index.xhtml
+++ b/medlegal/web/index.xhtml
@@ -17,7 +17,7 @@
             <ui:define name="content">
 
                 <h:form>
-                    <h:outputText value="#{usuarioLoginBean.hora}" style="color: #7cadd3"/>
+                    <h:outputText value="#{hora.fecha}" style="color: #7cadd3"/>
                     <p:panel header="Administrcion de riesgos" style="background: none; border: 0">
                         <h:panelGrid columns="2" style="width: 1000px">
                             <img alt="triangulo" src="resources/imagenes/triangle.png"/>
