Correccion de herrores en la creacion y edicion de procesos

--- a/medlegal/web/Admin/agregarFuncionario.xhtml
+++ b/medlegal/web/Admin/agregarFuncionario.xhtml
@@ -241,7 +241,7 @@
                                 </p:cellEditor>  
                             </p:column>
 
-                            <p:column headerText="Options" width="25">  
+                            <p:column headerText="Editar" width="25">  
                                 <p:rowEditor />  
                             </p:column>  
 
@@ -252,7 +252,7 @@
             </ui:define>
 
             <ui:define name="bottom">
-                bottom
+                
             </ui:define>
 
         </ui:composition>
