--- a/medlegal/web/index.xhtml
+++ b/medlegal/web/index.xhtml
@@ -26,7 +26,7 @@
                                 <h:inputText id ="usuario" value="#{usuarioLoginBean.usuario}">
                                     <f:validateRequired/>
                                 </h:inputText>
-                                <h:outputText value="Digite su Password"/>
+                                <h:outputText value="Digite su clave"/>
                                 <h:inputSecret id ="password" value="#{usuarioLoginBean.password}">
                                     <f:validateRequired />
                                 </h:inputSecret>                  
@@ -43,7 +43,7 @@
             </ui:define>
 
             <ui:define name="bottom">
-                bottom
+                Powered by @Jherson A. Cohecha S.
             </ui:define>
 
         </ui:composition>
