--- a/medlegal/web/Admin/agregarPanorama.xhtml
+++ b/medlegal/web/Admin/agregarPanorama.xhtml
@@ -59,6 +59,7 @@
                                 <h:outputText value="#{pro.subarea.descsubarea}"/>
                             </p:column>
                             <p:column headerText="Fucionario" width="150">
+                                <h:outputText value="#{pro.funcionario.nombre}  #{pro.funcionario.apellido}"/>
                             </p:column>
                             <p:column headerText="Fecha Creacion" width="80">
                                 <h:outputText value="#{pro.creado}"/>
